fix: scrolling on firefox (#131)
* fix: scrolling on firefox

* fix: zooming and bouncing

--- a/src/components/EditorPage/EditorPage.css
+++ b/src/components/EditorPage/EditorPage.css
@@ -41,3 +41,7 @@
   margin-left: 24px;
   margin-right: 0;
 }
+
+body.lock-scroll {
+  overflow: hidden;
+}
